# mcp-workspace-finder

./: .env.example  .gitignore  .users_cache.json  README.md  pyproject.toml  servers.yaml
app/: __init__.py  __main__.py  config.py  evidence_links.py  llm_client.py  llm_search.py  llm_summary.py  logging_utils.py  mcp_runners.py  process.py  progress_display.py  retry_policy.py  schema_validation.py  search_mapping.py  search_pipeline.py  smoke.py  status_display.py  summary_display.py  summary_pipeline.py
docs/: Concept.md  Design.md  Diagrams.md  Plan.md  Requirements.md
docs/tasks/: Phase_1.md  Phase_2.md  Phase_3.md  Phase_4.md  Phase_5.md  Phase_6.md  Phase_7.md  Phase_extra.md
schemas/: gdrive_search.json  github_search.json  slack_search.json
scripts/: smoke_real.sh
tests/: conftest.py  test_e2e_summary_pipeline.py  test_evidence_links.py  test_llm_logging.py  test_llm_summary.py  test_logging_masking.py  test_main.py  test_oneshot_flow.py  test_oneshot_mcp_integration.py  test_oneshot_zero_results.py  test_process.py  test_progress_display.py  test_rate_limit_retry.py  test_readiness.py  test_repl_commands.py  test_restart_policy.py  test_search_generation.py  test_search_mapping.py  test_search_pipeline.py  test_search_pipeline_integration.py  test_search_schema.py  test_smoke.py  test_status_display.py  test_summary_display.py  test_summary_fail_soft.py
tests/mocks/: __init__.py  base_mcp_server.py  gdrive_server.py  github_server.py  slack_server.py
